change google tags

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en"> 
 <head>
 	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-4E9QBJ7KRX"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-QSDR047XC7"></script>
 	<script>
 	window.dataLayer = window.dataLayer || [];
 	function gtag(){dataLayer.push(arguments);}
 	gtag('js', new Date());
 
-	gtag('config', 'G-4E9QBJ7KRX');
+	gtag('config', 'G-QSDR047XC7');
 	</script>
     <title>Yuna Lin - Data Engineer</title>
     
@@ -50,7 +50,7 @@
 					    </div><!--//primary-info-->
 					    <div class="secondary-info ml-md-auto mt-2">
 						    <ul class="resume-social list-unstyled">
-				                <li class="mb-3"><a href="https://www.linkedin.com/in/rueiyun-lin-0b52b5167/"><span class="fa-container text-center mr-2"><i class="fab fa-linkedin-in fa-fw"></i></span>linkedin.com/in/Rueiyun (Una) Lin</a></li>
+				                <li class="mb-3"><a href="https://www.linkedin.com/in/rueiyun-lin-0b52b5167/"><span class="fa-container text-center mr-2"><i class="fab fa-linkedin-in fa-fw"></i></span>linkedin.com/in/Rueiyun (Yuna) Lin</a></li>
 								<li class="mb-3"><a href="https://github.com/unalingithub"><span class="fa-container text-center mr-2"><i class="fab fa-github fa-fw"></i></span>github.com/unalingithub</a></li>
 						    </ul>
 					    </div><!--//secondary-info-->
